# fgc

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  clean.sh  run.sh
include/: Enemy.h  Game.h  Input.h  Logger.h  Player.h  Projectile.h  Renderer.h  collisions.h  dejavufont.h  matrices.h  sfx.h  utils.h
include/glad/: glad.h
modelos/: Firstaid.mtl  Skeleton_Necromancer.mtl  Terrorpin.mtl  Varinha.mtl
src/: Enemy.cpp  Game.cpp  Input.cpp  Player.cpp  Projectile.cpp  Renderer.cpp  collisions.cpp  glad.c  main.cpp  miniaudio.c  sfx.cpp  utils.cpp
src/shaders/: shader_fragment.glsl  shader_vertex.glsl
